Adjusted some padding issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,7 @@ label {
   display: block;
   margin: 0 auto;
   text-align: center;
-  padding: 0 0 10px 0;
+  padding: 0 0 20px 0;
 }
 
 .solution-section p {
@@ -1107,8 +1107,8 @@ label {
   .cumulus-section img {
     height: 55vw;
     width: 45vw;
-    max-width: 348px;
-    max-height: 248px;
+    max-width: 368px;
+    max-height: 278px;
     grid-column: 2;
     grid-row: 1;
     margin-left: 70px;
